게임 밸런스 및 기능 업데이트

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h2>점수</h2>
                 <p id="score">0</p>
             </div>
-            <div class="score-board">
-                <h2>최고 점수</h2>
-                <p id="high-score">0</p>
+            <div class="score-board" id="ranking-board">
+                <h2>🏆 랭킹 🏆</h2>
+                <ol id="ranking-list"></ol>
             </div>
             <div class="score-board">
                 <h2>시간</h2>
